Fixed Sidebar mt on mobile bo MMMenu

--- a/resources/css/partials/sidebar.css
+++ b/resources/css/partials/sidebar.css
@@ -4,7 +4,7 @@
   transform: translateX(-110vw);
   transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1), visibility 0s linear 0.6s;
 
-	&-container { @apply py-8 }
+	&-container { @apply pt-4 pb-8 lg:pt-8 }
 
 	nav { @apply mt-2.5 mb-5 px-5;
 		h3 { @apply font-semibold py-2.5 px-3 text-xl }
